--- a/index.html
+++ b/index.html
@@ -5,54 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <header>
-      <a href=""><span>Web</span>Studio</a>
+    <header class="header">
+      <a href="" class="logo-link link"><span class="logo-part">Web</span>Studio</a>
       <nav>
-        <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <ul class="nav-list">
+          <li class="nav-item list"><a href="./" class="nav-link link">Студія</a></li>
+          <li class="nav-item list"><a href="./portfolio.html" class="nav-link link">Портфоліо</a></li>
+          <li class="nav-item list"><a href="" class="nav-link link">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="authoriz-link">
+        <li class="authoriz-item list">
+          <a href="mailto:info@devstudio.com" class="authoriz-mail link">info@devstudio.com</a>
+        </li>
+        <li class="authoriz-item list"><a href="tel:+380961111111" class="authoriz-tel link">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="hero">
+        <h1 class="hero-text">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="hero-btn">Замовити послугу</button>
         <!-- <a href="">Замовити послугу</a> -->
       </section>
-      <section>
+      <section class="preference">
         <h2>Наші переваги</h2>
         <ul>
-          <li>
+          <li class="preference-text">
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
-          <li>
+          <li class="preference-text">
             <h3>ПУНКТУАЛЬНІСТЬ</h3>
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
-          <li>
+          <li class="preference-text">
             <h3>ПЛАНУВАННЯ</h3>
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
-          <li>
+          <li class="preference-text">
             <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
 
-      <section>
+      <section class="work">
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
@@ -67,25 +75,25 @@
         </ul>
       </section>
 
-      <section>
+      <section class="team">
         <h2>Наша команда</h2>
-        <ul>
-          <li>
+        <ul class="team-list">
+          <li class="team-item">
             <img src="./images/imgface-1.jpg" alt="фото сотрудника" width="270" height="260" />
             <h3>Ігор Дем'яненко</h3>
             <span>Product Designer</span>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/imgface-2.jpg" alt="фото сотрудника" width="270" height="260" />
             <h3>Ольга Рєпіна</h3>
             <span>Frontend Developer</span>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/imgface-3.jpg" alt="фото сотрудника" width="270" height="260" />
             <h3>Микола Тарасов</h3>
             <span>Marketing</span>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/imgface-1.jpg" alt="фото сотрудника" width="270" height="260" />
             <h3>Михайло Єрмаков</h3>
             <span>UI Designer</span>
@@ -95,11 +103,11 @@
     </main>
 
     <footer>
-      <a href=""><span>Web</span>Studio</a>
-      <address>
-        <span>м. Київ, пр-т Лесі Українки, 26</span><br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <a href="" class="logo-link link"><span class="logo-part">Web</span>Studio</a>
+      <address class="footer">
+        <span class="footer-adress">м. Київ, пр-т Лесі Українки, 26</span><br />
+        <a href="mailto:info@devstudio.com" class="authoriz-mail link">info@devstudio.com</a><br />
+        <a href="tel:+380961111111" class="authoriz-tel link">+38 096 111 11 11</a>
       </address>
     </footer>
   </body>
