--- a/portfolio.html
+++ b/portfolio.html
@@ -4,76 +4,85 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="./"><span>Web</span>Studio</a>
+    <header class="header">
+      <a href="" class="logo-link link"><span class="logo-part">Web</span>Studio</a>
       <nav>
-        <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <ul class="nav-list">
+          <li class="nav-item list"><a href="./" class="nav-link link">Студія</a></li>
+          <li class="nav-item list"><a href="./portfolio.html" class="nav-link link">Портфоліо</a></li>
+          <li class="nav-item list"><a href="" class="nav-link link">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="authoriz-link">
+        <li class="authoriz-item list">
+          <a href="mailto:info@devstudio.com" class="authoriz-mail link">info@devstudio.com</a>
+        </li>
+        <li class="authoriz-item list"><a href="tel:+380961111111" class="authoriz-tel link">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
-      <section>
-        <ul>
-          <li><button type="button">Усі</button></li>
-          <li><button type="button">Веб-сайти</button></li>
-          <li><button type="button">Додатки</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+      <section class="portfolio">
+        <h1>Наши работы</h1>
+        <ul class="portfolio-list">
+          <li><button type="button" class="portfolio-btn">Усі</button></li>
+          <li><button type="button" class="portfolio-btn">Веб-сайти</button></li>
+          <li><button type="button" class="portfolio-btn">Додатки</button></li>
+          <li><button type="button" class="portfolio-btn">Дизайн</button></li>
+          <li><button type="button" class="portfolio-btn">Маркетинг</button></li>
         </ul>
         <ul>
-          <li>
+          <li class="portfolio-list">
             <img src="./images/portfolio/portf-001.jpg" alt="exemple1" width="370" height="294" />
             <h2>Технокряк</h2>
             <p>Веб-сайт</p>
           </li>
-          <li>
+          <li class="portfolio-list">
             <img src="./images/portfolio/portf-002.jpg" alt="exemple1" width="370" height="294" />
             <h2>Постер New Orlean vs Golden Star</h2>
             <p>Дизайн</p>
           </li>
-          <li>
+          <li class="portfolio-list">
             <img src="./images/portfolio/portf-003.jpg" alt="exemple1" width="370" height="294" />
             <h2>Ресторан Seafood</h2>
             <p>Додаток</p>
           </li>
-          <li>
+          <li class="portfolio-list">
             <img src="./images/portfolio/portf-004.jpg" alt="exemple1" width="370" height="294" />
             <h2>Проєкт Prime</h2>
             <p>Маркетинг</p>
           </li>
-          <li>
+          <li class="portfolio-list">
             <img src="./images/portfolio/portf-005.jpg" alt="exemple1" width="370" height="294" />
             <h2>Проєкт Boxes</h2>
             <p>Додаток</p>
           </li>
-          <li>
+          <li class="portfolio-list">
             <img src="./images/portfolio/portf-006.jpg" alt="exemple1" width="370" height="294" />
             <h2>Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
-          <li>
+          <li class="portfolio-list">
             <img src="./images/portfolio/portf-007.jpg" alt="exemple1" width="370" height="294" />
             <h2>Видання Limited Edition</h2>
             <p>Дизайн</p>
           </li>
-          <li>
+          <li class="portfolio-list">
             <img src="./images/portfolio/portf-008.jpg" alt="exemple1" width="370" height="294" />
             <h2>Проєкт LAB</h2>
             <p>Маркетинг</p>
           </li>
-          <li>
+          <li class="portfolio-list">
             <img src="./images/portfolio/portf-009.jpg" alt="exemple1" width="370" height="294" />
             <h2>Growing Business</h2>
             <p>Додаток</p>
@@ -83,11 +92,11 @@
     </main>
 
     <footer>
-      <a href=""><span>Web</span>Studio</a>
-      <address>
-        <span>м. Київ, пр-т Лесі Українки, 26</span><br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <a href="" class="logo-link link"><span class="logo-part">Web</span>Studio</a>
+      <address class="footer">
+        <span class="footer-adress">м. Київ, пр-т Лесі Українки, 26</span><br />
+        <a href="mailto:info@devstudio.com" class="authoriz-mail link">info@devstudio.com</a><br />
+        <a href="tel:+380961111111" class="authoriz-tel link">+38 096 111 11 11</a>
       </address>
     </footer>
   </body>
